--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "scripts": {
     "lint-server": "./node_modules/eslint/bin/eslint.js server/**",
-    "test": "grunt test && npm run lint-server && npm run test-node",
+    "test": "grunt test && npm run test-node",
     "test-node": "mocha test/*.test.js",
     "prestart": "",
     "start": "grunt dev",
